--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
+  "proxy": "http://localhost:1088",
   "name": "task7.1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@stripe/react-stripe-js": "^2.3.0",
+    "@stripe/stripe-js": "^2.1.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.11.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^10.3.1",
+    "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "stripe": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
